--- a/example/index.html
+++ b/example/index.html
@@ -1,16 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-    <title>react-moment-datetime</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"
+    />
+    <title>react-datetime-picker</title>
     <style>
-      *, *:before, *:after {
+      *,
+      *:before,
+      *:after {
         box-sizing: border-box;
       }
       body {
         margin: 0;
-        font: 16px/1.5em 'Lato', sans-serif;
+        font: 16px/1.5em "Lato", sans-serif;
       }
       .app {
         max-width: 600px;
@@ -33,10 +38,16 @@
         font-size: 14px;
       }
     </style>
-    <link rel="stylesheet" href="./css/datetime.css">
+    <link rel="stylesheet" href="./css/datetime.css" />
   </head>
   <body>
-    <a href="https://github.com/koliseoapi/react-moment-datetime"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+    <a href="https://github.com/koliseoapi/react-datetime-picker"
+      ><img
+        style="position: absolute; top: 0; right: 0; border: 0;"
+        src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67"
+        alt="Fork me on GitHub"
+        data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"
+    /></a>
     <div id="app"></div>
     <script src="../build/app.js"></script>
   </body>
